[project]
name = "langgraph-mcq-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.10",
    "python-dotenv>=1.2.2",
    "streamlit>=1.54.0",
    "uvicorn>=0.41.0",
]
